fix exim4 packafe name

--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -138,6 +138,6 @@
   when: ansible_facts.os_family == 'Debian'
   ansible.builtin.apt:
     name:
-      - exim4
+      - exim4-daemon-light
       - multipathd
     state: absent
