adapt issue pattern

--- a/playbooks/roles/info_healthy/tasks/issue.yaml
+++ b/playbooks/roles/info_healthy/tasks/issue.yaml
@@ -7,15 +7,16 @@
       journalctl --since "{{ issue_since }}" --quiet |
         grep -v -F 'Speculative Return Stack Overflow: WARNING:' |
         grep -F \
-          -e '(nowflake)' \
           -e 'BUG:' \
           -e 'BUG at' \
           -e 'Call Trace:' \
+          -e 'Error:' \
           -e 'invoked oom-killer' \
           -e 'No space left on device' \
           -e 'Oops:' \
+          -e 'rebooting.' \
           -e 'status=9/KILL' \
-          -e '.service: Failed' \
+          -e '.service: Control process exited' \
           -e 'WARNING:' |
         head -n 500
   register: _result
