--- a/playbooks/roles/setup_autoupdate/tasks/main.yaml
+++ b/playbooks/roles/setup_autoupdate/tasks/main.yaml
@@ -1,5 +1,6 @@
 ---
 - name: Main
+  when: autoupdate_skip | bool
   module_defaults:
     ansible.builtin.apt:
       allow_change_held_packages: true
