--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -11,7 +11,7 @@
       - "ansible_facts.default_ipv6.address | length > 0"
       - "ansible_facts.default_ipv6.address is not match('fe80::')"
 
-- name: Change IPv6 to non-default ::1
+- name: Set a pseudo-randomly choosen ipv6 address
   when: ansible_facts.default_ipv6.address != _ipv6_new
   vars:
     _a: "{{ '%x' % (range(0, 65535) |
