ignore deprecation warning, e.g. for .synchronize module

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -24,5 +24,8 @@ display_skipped_hosts = false
 # no log, b/c it fools the attempt to grep the system log
 no_target_syslog = true
 
+# https://github.com/ansible-collections/ansible.posix/issues/686:
+deprecation_warnings = True
+
 [ssh_connection]
 ssh_args = -4 -o ForwardAgent=no -o ForwardX11=no -o StrictHostKeyChecking=yes -o ControlMaster=auto -o ControlPersist=120s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes -o ServerAliveInterval=60s
