--- a/site-test-image.yaml
+++ b/site-test-image.yaml
@@ -2,4 +2,4 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
-- ansible.builtin.import_playbook: playbooks/test.yaml
+- ansible.builtin.import_playbook: playbooks/test-image.yaml
