de-activate 3 more kernel configs

--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -73,6 +73,7 @@ kernel_git_config: |-
   CONFIG_DRM=n
   CONFIG_EDAC=n
   CONFIG_FB=n
+  CONFIG_FTRACE=n
   CONFIG_HAMRADIO=n
   CONFIG_HIBERNATION=n
   CONFIG_HID=n
@@ -84,12 +85,14 @@ kernel_git_config: |-
   CONFIG_INPUT_MOUSE=n
   CONFIG_INPUT_MOUSEDEV=n
   CONFIG_IPV6_SEG6_BPF=n
+  CONFIG_LLC=n
   CONFIG_LOCALVERSION=""
   CONFIG_LOCALVERSION_AUTO=y
   CONFIG_LPC_ICH=n
   CONFIG_LWTUNNEL_BPF=n
   CONFIG_MD=n
   CONFIG_MFD_CORE=n
+  CONFIG_MPTCP=n
   CONFIG_PANIC_ON_OOPS=n
   CONFIG_PARTITION_ADVANCED=n
   CONFIG_PINCTRL=n
