--- a/playbooks/roles/info_healthy/tasks/_trace.yaml
+++ b/playbooks/roles/info_healthy/tasks/_trace.yaml
@@ -4,13 +4,13 @@
   throttle: 1
   ansible.builtin.lineinfile:
     line: "{{ item }}"
-    path: "{{ tmp_dir }}/trace-codeline.txt"
+    path: "{{ tmp_dir }}/trace/_known.txt"
   register: _known
 
 - name: Work on new trace
   when: _known.changed
   block:
-    - name: Get full trace
+    - name: Get trace
       changed_when: false
       ansible.builtin.shell:
         cmd: |-
@@ -19,20 +19,30 @@
             head -n 999
       register: _full
 
-    - name: File full trace
+    - name: File trace
       delegate_to: localhost
       throttle: 1
       ansible.builtin.blockinfile:
         block: |
-          #    {{ inventory_hostname }}    {{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}    {{ ansible_facts.lsb.description }}
+          # {{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}    {{ ansible_facts.lsb.description }}
           {{ _full.stdout }}
-        path: "{{ tmp_dir }}/trace-full.txt"
+        path: "{{ tmp_dir }}/trace/{{ inventory_hostname }}.txt"
         marker: "# {mark} {{ item }} "
         marker_begin: "TRACE BEGIN"
         marker_end: "TRACE END"
 
-    - name: Get dmesg for the trace
+  rescue:
+    - name: Reset known state for trace
+      delegate_to: localhost
+      throttle: 1
+      ansible.builtin.lineinfile:
+        line: "{{ item }}"
+        path: "{{ tmp_dir }}/trace/_known.txt"
+        state: absent
+
+  always:
+    - name: Get dmesg for trace
       ansible.builtin.include_tasks: _dmesg.yaml
 
-    - name: Get kernel config for the trace
+    - name: Get kernel config for trace
       ansible.builtin.include_tasks: _kernel-config.yaml
