--- a/playbooks/roles/info_healthy/tasks/issue.yaml
+++ b/playbooks/roles/info_healthy/tasks/issue.yaml
@@ -1,10 +1,10 @@
 ---
-- name: Grep system log for an issue
+- name: Grep system log for an issue since boot
   changed_when: false
   failed_when: _result.stderr | length > 0 or _result.rc > 0
   ansible.builtin.shell:
     cmd: |-
-      journalctl --since "{{ issue_since }}" --quiet |
+      journalctl --since "{{ issue_since }}" -b --quiet |
         grep -v -F 'Speculative Return Stack Overflow: WARNING:' |
         grep -F \
           -e 'BUG:' \
