lower forks to 96

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,8 +3,8 @@ interpreter_python = /usr/bin/python3
 
 inventory = ./inventory
 
-# 7 tasks per vCPU
-forks = 112
+# 6 forks per vCPU
+forks = 96
 pipelining = true
 strategy = ansible.builtin.free
 
