--- a/playbooks/roles/setup_common/tasks/firewall-tor.yaml
+++ b/playbooks/roles/setup_common/tasks/firewall-tor.yaml
@@ -7,6 +7,7 @@
 
 - name: Download DDoS solution
   throttle: 16
+  retries: 3
   ansible.builtin.get_url:
     url: "https://github.com/toralf/torutils/raw/main/{{ item }}"
     dest: "/root/{{ item }}"
@@ -109,6 +110,7 @@
   block:
     - name: Download egress firewall
       throttle: 16
+      retries: 3
       ansible.builtin.get_url:
         url: "https://github.com/toralf/torutils/raw/main/{{ item }}"
         dest: "/root/{{ item }}"
