--- a/playbooks/roles/snapshot/tasks/snapshot.yaml
+++ b/playbooks/roles/snapshot/tasks/snapshot.yaml
@@ -3,9 +3,7 @@
   delegate_to: localhost
   throttle: "{{ concurrent_local_jobs }}"
   changed_when: true
-  vars:
-    _description: "{{ inventory_hostname | regex_replace('^hi-', '') }}"
   ansible.builtin.command:
     cmd: >-
-      hcloud --quiet --poll-interval 10s server create-image --type snapshot --description='{{ _description }}'
+      hcloud --quiet --poll-interval 10s server create-image --type snapshot --description='{{ snapshot_description }}'
       {{ inventory_hostname }}
