switch to use new Hetzner cx23 cloud type (AMD/Intel)

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -21,7 +21,7 @@ display_ok_hosts = false
 # overwrite: ANSIBLE_DISPLAY_SKIPPED_HOSTS=true
 display_skipped_hosts = false
 
-# no log, b/c it fools the attempt to grep the system log
+# no log, b/c it fools any attempt to grep the system log
 no_target_syslog = true
 
 # https://github.com/ansible-collections/ansible.posix/issues/686:
