--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -30,7 +30,7 @@
     cmd: wc -l </root/.ssh/authorized_keys
   register: _result
 
-- name: Create swapfile for systems with small RAM
+- name: Create swapfile for tiny systems (IONOS)
   when: ansible_facts.memtotal_mb < 2048 and (kernel_git_repo_url | length > 0 or tor_port > 0)
   ansible.builtin.shell:
     cmd: |-
