--- a/playbooks/test-image.yaml
+++ b/playbooks/test-image.yaml
@@ -4,6 +4,7 @@
   roles:
     - role: poweron
     - role: setup_common
+    - role: setup_kernel
     - role: info_healthy
     - role: shutdown
     - role: snapshot
