--- a/playbooks/setup.yaml
+++ b/playbooks/setup.yaml
@@ -17,5 +17,6 @@
 - name: Setup autoupdate
   hosts: all
   roles:
+    - role: setup_kernel
     - role: setup_autoupdate
     - role: info_healthy
