fix movement of kernel build config variable

--- a/playbooks/roles/setup_kernel/defaults/main.yaml
+++ b/playbooks/roles/setup_kernel/defaults/main.yaml
@@ -8,3 +8,75 @@ kernel_git_patches: []
 
 # for reboot handler
 tor_port: 0
+
+kernel_git_config: |-
+  # generic
+
+  CONFIG_AGP=n
+  CONFIG_ATA=n
+  CONFIG_BACKLIGHT_CLASS_DEVICE=n
+  CONFIG_DMADEVICES=n
+  CONFIG_DRM=n
+  CONFIG_EDAC=n
+  CONFIG_FB=n
+  CONFIG_FTRACE=n
+  CONFIG_HAMRADIO=n
+  CONFIG_HIBERNATION=n
+  CONFIG_HID=n
+  CONFIG_HID_SUPPORT=n
+  CONFIG_HWMON=n
+  CONFIG_I2C=n
+  CONFIG_INPUT_JOYDEV=n
+  CONFIG_INPUT_KEYBOARD=n
+  CONFIG_INPUT_MOUSE=n
+  CONFIG_INPUT_MOUSEDEV=n
+  CONFIG_IPV6_SEG6_BPF=n
+  CONFIG_LLC=n
+  CONFIG_LOCALVERSION=""
+  CONFIG_LOCALVERSION_AUTO=y
+  CONFIG_LPC_ICH=n
+  CONFIG_LWTUNNEL_BPF=n
+  CONFIG_MD=n
+  CONFIG_MFD_CORE=n
+  CONFIG_MPTCP=n
+  CONFIG_PANIC_ON_OOPS=n
+  CONFIG_PARTITION_ADVANCED=n
+  CONFIG_PINCTRL=n
+  CONFIG_PM_DEVFREQ=n
+  CONFIG_PROC_MEM_ALWAYS_FORCE=n
+  CONFIG_PROC_MEM_FORCE_PTRACE=n
+  CONFIG_PROC_MEM_NO_FORCE=y
+  CONFIG_REGULATOR=n
+  CONFIG_SOUNDWIRE=n
+  CONFIG_SUSPEND=n
+  CONFIG_THERMAL=n
+  CONFIG_USB=n
+  CONFIG_USB_HID=n
+  CONFIG_USB_SUPPORT=n
+  CONFIG_VIRTIO=n
+  CONFIG_VIRTUALIZATION=n
+  CONFIG_WIRELESS=n
+  CONFIG_WLAN=n
+  CONFIG_X86_PLATFORM_DEVICES=n
+  CONFIG_XEN=n
+  CONFIG_ZSWAP=n
+
+  # inspired by https://kspp.github.io/Recommended_Settings#gcc-plugins
+
+  CONFIG_GCC_PLUGINS=y
+  CONFIG_GCC_PLUGIN_LATENT_ENTROPY=y
+  CONFIG_GCC_PLUGIN_RANDSTRUCT=y
+  CONFIG_GCC_PLUGIN_STRUCTLEAK=y
+  CONFIG_GCC_PLUGIN_STRUCTLEAK_BYREF_ALL=y
+  CONFIG_GCC_PLUGIN_STACKLEAK=y
+
+  # Ubuntu
+
+  CONFIG_BPF_SYSCALL=n
+  CONFIG_BPF_JIT=n
+  CONFIG_BPF_JIT_ALWAYS_ON=n
+  CONFIG_BPF_JIT_DEFAULT_ON=n
+  CONFIG_DEBUG_INFO_BTF=n
+  CONFIG_DEBUG_INFO_BTF_MODULES=n
+  CONFIG_PAHOLE_HAS_BTF_TAG=n
+  CONFIG_SYSTEM_REVOCATION_KEYS=""
